2011-05-22  Adam Barth  <abarth@webkit.org>

        Build fix.  More public destructors needed to play nice with OwnPtr.

        * WebCoreSupport/InspectorClientGtk.cpp:

2011-05-22  Adam Barth  <abarth@webkit.org>

        Build fix.  InspectorFrontendClient needs a public destructor so that
        we can properly track ownership using OwnPtr.

        * WebCoreSupport/InspectorClientGtk.h:

2011-05-22  Adam Barth  <abarth@webkit.org>

        Strict PassOwnPtr build fix.

        * WebCoreSupport/InspectorClientGtk.cpp:
        (WebKit::InspectorClient::openInspectorFrontend):
        (WebKit::InspectorFrontendClient::InspectorFrontendClient):

2011-05-22  Adam Barth  <abarth@webkit.org>

        Strict PassOwnPtr build fix.

        * WebCoreSupport/DumpRenderTreeSupportGtk.cpp:
        (DumpRenderTreeSupportGtk::addUserStyleSheet):

2011-05-20  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Sam Weinig.

        numberOfActiveAnimations() can include animations from documents in the page cache
        https://bugs.webkit.org/show_bug.cgi?id=53641

        Pass the Frame's document as the one to count animations on.

        * WebCoreSupport/DumpRenderTreeSupportGtk.cpp:
        (DumpRenderTreeSupportGtk::numberOfActiveAnimations):

2011-05-16  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Scrolling in Twitter is broken after r86102
        https://bugs.webkit.org/show_bug.cgi?id=60922

        Fix adjustment handling for pages that trigger the slow scrolling path.
        The slow scrolling path is triggered by WebCore when it determines that
        doing a simple invalidation is quicker than doing a normal scroll. This
        typically happens when there are large elements with fixed positions.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::invalidateContentsForSlowScroll): Poke the adjustment